added gh-pages script

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://ambikak10.github.io/grocery-list-app/",
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
